force-app/src/objects/c2g__codaAccountingCurrency__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcurrency</customHelpPage>
    <description>Stores the details of an accounting currency, including its ISO code.</description>
    <fields>
        <fullName>c2g__ARWriteOffLimit__c</fullName>
        <description>Maximum Write-Off amount for the currency.</description>
        <label>AR Write-Off Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DecimalPlaces__c</fullName>
        <label>Decimal Places</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__Home__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The company to which the currency is subscribed</description>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Accounting Currencies</relationshipLabel>
        <relationshipName>AccountingCurrencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Accounting Currency</label>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_codaAccountingCurrency</fullName>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__Dual__c</columns>
        <columns>c2g__Home__c</columns>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_codaAccountingCurrency</fullName>
        <columns>NAME</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>c2g__Home__c</columns>
        <columns>c2g__Dual__c</columns>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Home__c</columns>
        <columns>c2g__Dual__c</columns>
        <columns>c2g__DecimalPlaces__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ISO Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Currencies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>